--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 
     <h1>Cambio de género</h1>
     <form id="changeGenderForm">
-        <input type="text" id="dniChange" placeholder="DNI sin puntos" required />
+        <input type="number" id="dniChange" placeholder="DNI sin puntos" required />
         <input type="text" id="newGender" placeholder="Nuevo género" required />
         <input type="submit" value="Cambiar género" />
     </form>
